--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Julian Blane
 email: julian@julianblane.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Desarrollador
+  Proyectos, lanzamientos y contenido digital.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  julianblane
