generate pages for actually used categories

--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -9,4 +9,7 @@ olsedba:
     olsedba es un shooter.
 
 art:
+  title: Visuales
+  description: >-
+    Un poco de lo que hago y no encasilla en un gran proyecto.
 # TODO: title override
