--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: julian@julianblane.com
 description: >- # this means to ignore newlines until "baseurl:"
   Proyectos, lanzamientos y contenido digital.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://julianblane.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  julianblane
 
 # Build settings
