--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,13 @@ author:
 
 locale: es_AR
 
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      header: "JULIAN BLANE"
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
