--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -6,7 +6,7 @@ profundidades:
 olsedba:
   name: olsedba
   description: >-
-    olsedba es un shooter.
+    olsedba es un juego que transcurre en la ciudad de cordoba.
 
 art:
   name: Visuales
