commisions article, playable grid include

--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -3,7 +3,7 @@ shorts:
   description: >-
     Videos cortitos que revelan un poco de lo que se trata el proyecto.
 
-novedades:
+news:
   name: Novedades
   description: >-
     Anuncios y menciones importantes sobre el proyecto.
